@@ -2,6 +2,7 @@ X-September-2024
 Changes made:
 * Fixed issue with Chimeran Conversion Center mission terrain list, reported by MitraLightbringer
 * Solved issue with missing Hybrid live alien item, reported by NecroDiego
+* Added human (Bandages and Medical Bag) and Chimera (Sym-Bac) health items
 
 08-September-2024: World Resistance Beta 0.2
 Changes made:
